--- a/src/main/webapp/resources/includes/button.css
+++ b/src/main/webapp/resources/includes/button.css
@@ -1,49 +1,109 @@
 @charset "UTF-8";
 
 h1 {
-  position: relative;
-  text-align: center;
-  color: #353535;
-  font-size: 50px;
-  font-family: "Cormorant Garamond", serif;
+	position: relative;
+	text-align: center;
+	color: #353535;
+	font-size: 50px;
+	font-family: "Cormorant Garamond", serif;
 }
 
 p {
-  font-family: 'Lato', sans-serif;
-  font-weight: 300;
-  text-align: center;
-  font-size: 18px;
-  color: #676767;
+	font-family: 'Lato', sans-serif;
+	font-weight: 300;
+	text-align: center;
+	font-size: 18px;
+	color: #676767;
 }
 
-
 .custom-btn {
-  width: 108px;
-  height: 40px;
-  color: #fff;
-  border-radius: 5px;
-  padding: 10px 25px; 
-  font-family: 'Lato', sans-serif;
-  font-weight: 500;
-  background: transparent;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  /*position: relative;*/
-  display: inline-block;
-   box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
-   7px 7px 20px 0px rgba(0,0,0,.1),
-   4px 4px 5px 0px rgba(0,0,0,.1);
-  outline: none;
+	width: 108px;
+	height: 40px;
+	color: #fff;
+	border-radius: 5px;
+	padding: 10px 25px;
+	font-family: 'Lato', sans-serif;
+	font-weight: 500;
+	background: transparent;
+	cursor: pointer;
+	transition: all 0.3s ease;
+	/*position: relative;*/
+	display: inline-block;
+	box-shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, .5), 7px 7px 20px
+		0px rgba(0, 0, 0, .1), 4px 4px 5px 0px rgba(0, 0, 0, .1);
+	outline: none;
 }
 
 /* 1 */
 .btn-1 {
-  background: rgb(6,14,131);
-  background: linear-gradient(0deg, rgba(6,14,131,1) 0%, rgba(12,25,180,1) 100%);
-  border: none;
-}
-.btn-1:hover {
-   background: rgb(0,3,255);
-background: linear-gradient(0deg, rgba(0,3,255,1) 0%, rgba(2,126,251,1) 100%);
+	background: rgb(6, 14, 131);
+	background: linear-gradient(0deg, rgba(6, 14, 131, 1) 0%,
+		rgba(12, 25, 180, 1) 100%);
+	border: none;
 }
 
+.btn-1:hover {
+	background: rgb(0, 3, 255);
+	background: linear-gradient(0deg, rgba(0, 3, 255, 1) 0%,
+		rgba(2, 126, 251, 1) 100%);
+}
+
+/* pw_change style */
+.btn {
+	box-sizing: border-box;
+	appearance: none;
+	background-color: transparent;
+	border: 2px solid #aaf0d1;
+	border-radius: 0.6em;
+	color: #aaf0d1;
+	cursor: pointer;
+	display: flex;
+	align-self: center;
+	font-size: 1rem;
+	font-weight: 400;
+	line-height: 1;
+	margin: 20px;
+	padding: 1.2em 2.8em;
+	text-decoration: none;
+	text-align: center;
+	text-transform: uppercase;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 700; &: hover , & : focus {
+    color : #fff;
+	outline: 0;
+}
+
+.pw_change_btn {
+	transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
+	&:hover {
+		box-shadow: 0 0 40px 40px #aaf0d1 inset;
+	}
+}
+
+.re_login_btn {
+	transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
+	&:hover {
+		box-shadow: 0 0 40px 40px #aaf0d1 inset;
+	}
+}
+
+.address_btn {
+	transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
+	&:hover {
+		box-shadow: 0 0 40px 40px #aaf0d1 inset;
+	}
+}
+
+.save_info_btn {
+	transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
+	&:hover {
+		box-shadow: 0 0 40px 40px #aaf0d1 inset;
+	}
+}
+
+.cancel_btn {
+	transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
+	&:hover {
+		box-shadow: 0 0 40px 40px #aaf0d1 inset;
+	}
+}
