--- a/src/main/webapp/resources/includes/button.css
+++ b/src/main/webapp/resources/includes/button.css
@@ -48,31 +48,6 @@ p {
 		rgba(2, 126, 251, 1) 100%);
 }
 
-/* pw_change style */
-.btn {
-	box-sizing: border-box;
-	appearance: none;
-	background-color: transparent;
-	border: 2px solid #aaf0d1;
-	border-radius: 0.6em;
-	color: #aaf0d1;
-	cursor: pointer;
-	display: flex;
-	align-self: center;
-	font-size: 1rem;
-	font-weight: 400;
-	line-height: 1;
-	margin: 20px;
-	padding: 1.2em 2.8em;
-	text-decoration: none;
-	text-align: center;
-	text-transform: uppercase;
-	font-family: 'Montserrat', sans-serif;
-	font-weight: 700; &: hover , & : focus {
-    color : #fff;
-	outline: 0;
-}
-
 .pw_change_btn {
 	transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
 	&:hover {
@@ -87,23 +62,22 @@ p {
 	}
 }
 
-.address_btn {
-	transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
-	&:hover {
-		box-shadow: 0 0 40px 40px #aaf0d1 inset;
-	}
+#address_btn {
+	width: 50px;
+	height: 20px;
 }
 
-.save_info_btn {
-	transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
-	&:hover {
-		box-shadow: 0 0 40px 40px #aaf0d1 inset;
-	}
+#email_check_button {
+	width: 50px;
+	height: 20px;
 }
 
-.cancel_btn {
-	transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
-	&:hover {
-		box-shadow: 0 0 40px 40px #aaf0d1 inset;
-	}
+#save_info_btn {
+	width: 50px;
+	height: 20px;
+}
+
+#cancel_btn {
+	width: 50px;
+	height: 20px;
 }
